--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -2,3 +2,26 @@
 $mobile-width: 320px;
 $tablet-width: 768px;
 $desktop-width: 1440px;
+
+// fonts
+$font-family-primary: "Oswald", "Arial", sans-serif;
+$font-family-secondary: "Lato", "Arial", sans-serif;
+
+// backgrounds
+$bg-color-main: #ffffff;
+$bg-color-primary: #f2f2f2;
+$bg-color-secondary: #68b738;
+$bg-color-hover: #5eaa2f;
+$bg-color-special: #666666;
+$bg-color-special-hover: #ebebeb;
+
+// decorations
+$decoration-color-main: #e6e6e6;
+$decoration-color-primary: #d9d9d9;
+$decoration-color-secondary: #cdcdcd;
+
+// text
+$text-color-main: #000000;
+$text-color-secondary: #ffffff;
+$text-color-special: #444444;
+$text-color-normal: #222222;
