--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -1,23 +1,53 @@
 // catalog
 
 .catalog__heading {
-  font-family: $font-family-primary;
-  font-weight: 400;
-  font-size: 36px;
-  line-height: 100%;
-  color: $text-color-main;
+  @include font-family($font-family-primary, 400, 36px, 100%);
   margin: 0;
-  padding: 27px 20px 40px;
+  padding: 28px 20px 39px;
+  color: $text-color-main;
 }
 
 .catalog__list {
   @include list-reset;
   display: grid;
   grid-template-columns: 1fr;
-  border-bottom: 2px solid $decoration-color-main;
+  border-bottom: 1px solid $decoration-color-main;
 }
 
 .catalog__item {
   padding: 23px 20px;
   border-top: 1px solid $decoration-color-main;
+}
+
+.catalog__item--all {
+  padding: 25px 20px 22px;
+}
+
+// tablet
+
+@media (min-width: $tablet-width) {
+  .catalog {
+    padding: 30px;
+  }
+
+  .catalog__heading {
+    @include font-family($font-family-primary, 400, 60px, 100%);
+    padding: 10px 0 165px;
+  }
+
+  .catalog__list {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 139px 60px;
+    border-bottom: 1px solid $decoration-color-main;
+  }
+
+  .catalog__item {
+    padding: 0 37px 40px;
+    border: none;
+    background-color: $bg-color-primary;
+  }
+
+  .catalog__item--all {
+    padding: 50px 37px 40px;
+  }
 }
