--- a/source/styles/blocks/control.scss
+++ b/source/styles/blocks/control.scss
@@ -5,27 +5,71 @@
   gap: 13px;
 }
 
+.control--program {
+  gap: 15px;
+}
+
+.control--contacts {
+  position: relative;
+  gap: 14px;
+}
+
+.control-additionally {
+  gap: 15px;
+}
+
 .control__input {
   @include font-family($font-family-primary, 400, 16px);
   box-sizing: border-box;
   flex-grow: 1;
   width: 50%;
-  text-transform: uppercase;
-  color: $text-color-special;
   margin: 0;
   padding: 9px 14px;
-  border: 2px solid $decoration-color-primary;
+  text-transform: uppercase;
+  border: 1px solid $decoration-color-primary;
+  color: $text-color-special;
+
+  &:hover {
+    background-color: $bg-color-hover;
+  }
+
+  &:focus-visible {
+    outline: 2px solid $bg-color-secondary;
+  }
+
+  &:active {
+    color: rgba($color: $text-color-secondary, $alpha: 0.3);
+  }
 }
 
 .control__input--medium {
   @include font-family($font-family-primary, 400, 20px);
+  padding: 12px;
+}
+
+.control__input--contacts {
+  padding: 10px 42px 10px 14px;
+}
+
+.control__icon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.control__icon--email {
+  right: 13px;
+}
+
+.control__icon--phone {
+  right: 12px;
 }
 
 .control__mark {
+  flex-shrink: 0;
   width: 28px;
   height: 28px;
-  border: 2px solid $decoration-color-primary;
-  flex-shrink: 0;
+  border: 1px solid $decoration-color-primary;
 }
 
 .control__mark--radio {
@@ -33,11 +77,17 @@
 }
 
 .control__input:checked + .control__mark--radio {
-  background-color: $bg-color-secondary;
+  background-image: url("../../icons/stack.svg#form_button-radio");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 13px 13px;
 }
 
 .control__input:checked + .control__mark--checkbox {
-  background-color: $bg-color-secondary;
+  background-image: url("../../icons/stack.svg#form_button-checkbox");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 18px 14px;
 }
 
 .control__name {
@@ -51,6 +101,6 @@
 
 .control--comment {
   @include font-family($font-family-primary, 400, 16px, 112%);
-  padding: 19px 12px;
+  padding: 17px 14px 25px;
   text-transform: uppercase;
 }
