--- a/source/styles/blocks/page-body.scss
+++ b/source/styles/blocks/page-body.scss
@@ -5,6 +5,18 @@
 }
 
 .page-body__page-footer {
-  padding: 15px 20px 20px;
+  padding: 19px 20px 20px;
   background-color: $bg-color-primary;
+}
+
+// tablet
+
+@media (min-width: $tablet-width) {
+  .page-body__page-header {
+    padding: 25px 19px 25px 30px;
+  }
+
+  .page-body__page-footer {
+    padding: 35px 30px;
+  }
 }
