--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -9,6 +9,7 @@ $font-family-secondary: "Lato", "Arial", sans-serif;
 
 // backgrounds
 $bg-color-main: #ffffff;
+$bg-color-auxiliary: #eaeaea;
 $bg-color-primary: #f2f2f2;
 $bg-color-secondary: #68b738;
 $bg-color-hover: #5eaa2f;
@@ -22,6 +23,13 @@ $decoration-color-secondary: #cdcdcd;
 
 // text
 $text-color-main: #000000;
+$text-color-auxiliary: #111111;
+$text-color-primary: #666666;
 $text-color-secondary: #ffffff;
 $text-color-special: #444444;
 $text-color-normal: #222222;
+
+// logo
+$logo-color: #111111;
+$logo-color-hover: #3e3e3e;
+$logo-color-active: #6b6b6b;
