--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -1,17 +1,17 @@
 // hero
 
 .hero {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 .hero__wrapper {
-  padding: 27px 35px 164px;
   display: flex;
   flex-direction: column;
   row-gap: 25px;
+  padding: 27px 35px 164px;
   background-color: $bg-color-secondary;
-  background-image: image-set(url("../../images/hero/hero-background-mobile@1x.webp") 1x, url("../../images/hero/hero-background-mobile@2x.webp") 2x, url("../../images/hero/hero-background-mobile@1x.jpg") 1x, url("../../images/hero/hero-background-mobile@2x.jpg") 2x);
+  background-image: linear-gradient(to top, rgba($color: $bg-color-secondary, $alpha: 0.85), rgba($color: $bg-color-secondary, $alpha: 0.85)), image-set(url("../../images/hero/hero-background-mobile@1x.webp") 1x, url("../../images/hero/hero-background-mobile@2x.webp") 2x, url("../../images/hero/hero-background-mobile@1x.jpg") 1x, url("../../images/hero/hero-background-mobile@2x.jpg") 2x);
   background-repeat: no-repeat;
   background-position: 65% 50%;
   background-size: cover;
@@ -19,20 +19,14 @@
 }
 
 .hero__heading {
+  @include font-family($font-family-primary, 400, 36px, 100%);
   margin: 0;
-  font-family: $font-family-primary;
-  font-weight: 400;
-  font-size: 36px;
-  line-height: 100%;
   text-align: center;
 }
 
 .hero__description {
+  @include font-family($font-family-primary, 400, 14px, 100%);
   margin: 0;
-  font-family: $font-family-primary;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 100%;
   text-transform: uppercase;
   text-align: center;
 }
@@ -48,8 +42,44 @@
   margin: 0 20px;
 }
 
+// tablet
+
 @media (min-width: $tablet-width) {
+  .hero {
+    padding: 0 30px;
+  }
+
   .hero__wrapper {
-    background-image: none;
+    display: grid;
+    grid-template-columns: 90px 420px;
+    padding: 40px 0 21px;
+    row-gap: 40px;
+    background: none;
+    color: $text-color-main;
+  }
+
+  .hero__heading {
+    @include font-family($font-family-primary, 400, 60px, 100%);
+    grid-column: 2 / 3;
+    text-align: left;
+  }
+
+  .hero__description {
+    @include font-family($font-family-primary, 400, 20px, 100%);
+    grid-column: 2 / 3;
+    text-align: left;
+  }
+
+  .hero__image {
+    width: 709px;
+    height: 609px;
+    margin: 0 auto;
+  }
+
+  .hero__button {
+    position: absolute;
+    left: 120px;
+    top: 370px;
+    margin: 0;
   }
 }
