--- a/source/styles/blocks/other.scss
+++ b/source/styles/blocks/other.scss
@@ -6,69 +6,46 @@
 }
 
 .other__heading {
+  @include font-family($font-family-primary, 400, 24px, 100%);
   display: flex;
   margin: 0;
-  padding: 0 0 36px;
-  font-family: $font-family-primary;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 100%;
+  padding: 0 0 35px;
   color: $text-color-main;
-}
-
-.other__heading::after {
-  content: "";
-  flex-grow: 1;
-  height: 2px;
-  background-color: $bg-color-secondary;
-  transform: translateX(40px) translateY(10px);
 }
 
 .other__list {
   @include list-reset;
   display: grid;
   grid-template-columns: 1fr;
+  border-bottom: 1px solid $decoration-color-main;
 }
 
 .other__item {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  padding: 13px 0 17px;
+  padding: 14px 0 17px;
   gap: 11px;
-  border-bottom: 1px solid $decoration-color-main;
-}
-
-.other__item:first-child {
   border-top: 1px solid $decoration-color-main;
 }
 
 .other__title {
+  @include font-family($font-family-primary, 400, 16px, 100%);
   grid-column: 1/-1;
   margin: 0;
-  font-family: $font-family-primary;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 100%;
   text-transform: uppercase;
   color: $text-color-normal;
 }
 
 .other__text {
+  @include font-family($font-family-secondary, 400, 14px, 129%);
   margin: 0;
-  font-family: $font-family-secondary;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 129%;
   color: $text-color-special;
 }
 
 .other__price {
+  @include font-family($font-family-secondary, 400, 14px, 129%);
   justify-self: flex-end;
   margin: 0;
-  font-family: $font-family-secondary;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 129%;
   color: $text-color-special;
 }
 
@@ -80,27 +57,24 @@
 .other__gifts {
   box-sizing: border-box;
   width: 100%;
-  min-height: 286px;
-  margin: 39px 0 0;
+  min-height: 290px;
+  margin: 35px 0 0;
   padding: 60px 0 30px;
   background-color: $bg-color-secondary;
-  background-image: image-set(url("../../images/other/background-gifts@1x.webp") 1x, url("../../images/other/background-gifts@2x.jpg") 2x);
+  background-image: linear-gradient(to top, rgba($color: $bg-color-secondary, $alpha: 0.85), rgba($color: $bg-color-secondary, $alpha: 0.85)), image-set(url("../../images/other/background-gifts@1x.webp") 1x, url("../../images/other/background-gifts@2x.jpg") 2x);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
 .other__gifts-text {
+  @include font-family($font-family-secondary, 400, 16px, 125%);
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 48px;
   margin: 0;
   padding: 0 60px;
-  font-family: $font-family-secondary;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 125%;
   text-align: center;
   color: $text-color-secondary;
 }
@@ -110,5 +84,7 @@
   display: block;
   width: 78px;
   height: 80px;
-  background-color: $decoration-color-main;
+  background-image: url("../../icons/stack.svg#icon-gift");
+  background-repeat: no-repeat;
+  background-position: center;
 }
