--- a/source/styles/blocks/page-footer.scss
+++ b/source/styles/blocks/page-footer.scss
@@ -1,21 +1,31 @@
 // page-footer
 
 .page-footer {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 .page-footer__logo {
-  padding: 20px 0;
-  display: flex;
-  justify-content: center;
+  padding: 20px 0 19px;
 }
 
 .page-footer__htmlacademy {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding: 20px 0;
-  text-decoration: none;
+}
+
+// tablet
+
+@media (min-width: $tablet-width) {
+  .page-footer {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+  }
+
+  .page-footer__logo {
+    padding: 22px 0;
+  }
+
+  .page-footer__htmlacademy {
+    padding: 22px 0;
+  }
 }
