--- a/source/styles/blocks/page-header.scss
+++ b/source/styles/blocks/page-header.scss
@@ -10,18 +10,70 @@
   grid-template-columns: 1fr auto;
   gap: 10px;
   align-items: center;
-  padding: 14px 20px 12px;
+  padding: 13px 15px 12px  20px;
   border-bottom: 2px solid $decoration-color-main;
 }
 
 .page-header__button {
   box-sizing: border-box;
+  position: relative;
   display: flex;
   min-width: 38px;
   min-height: 38px;
-  border: none;
   padding: 0;
-  background-color: $decoration-color-main;
+  border: none;
+  background-color: $bg-color-main;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:focus-visible {
+    opacity: 0.6;
+    outline: 2px solid $bg-color-secondary;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+.page-header__button::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  width: 24px;
+  height: 2px;
+  transform: translate(50%, -100%);
+  background-color: $text-color-main;
+  box-shadow: 0 8px 0 0 $text-color-main, 0 -8px 0 0 $text-color-main;
+  transition: all 0.3s ease;
+}
+
+.page-header__button--closed::before {
+  transform: translate(50%, -100%) rotate(45deg);
+  box-shadow: none;
+  transition: all 0.3s ease;
+}
+
+.page-header__button::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  width: 24px;
+  height: 2px;
+  transform: translate(50%, -100%);
+  background-color: $text-color-main;
+  box-shadow: 0 8px 0 0 $text-color-main, 0 -8px 0 0 $text-color-main;
+  transition: all 0.3s ease;
+}
+
+.page-header__button--closed::after {
+  transform: translate(50%, -100%) rotate(-45deg);
+  box-shadow: none;
+  transition: all 0.3s ease;
 }
 
 .page-header__button--closed {
@@ -34,10 +86,16 @@
   display: none;
 }
 
+// tablet
+
 @media (min-width: $tablet-width) {
   .page-header {
     grid-template-columns: auto 1fr;
-    padding: 0 25px;
+  }
+
+  .page-header__wrapper {
+    padding: 0;
+    border: none;
   }
 
   .page-header__button {
