--- a/source/styles/blocks/page-main.scss
+++ b/source/styles/blocks/page-main.scss
@@ -1,26 +1,26 @@
 // page-main
 
 .page-main__programs {
-  padding: 20px;
+  padding: 20px 20px 10px;
 }
 
 .page-main__functional {
-  padding: 3px 20px 50px;
+  padding: 10px 20px 50px;
 }
 
 .page-main__example {
-  padding: 25px 20px 40px;
+  padding: 25px 20px 42px;
 }
 
 .page-main__catalog {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   padding: 0;
-  box-sizing: border-box;
 }
 
 .page-main__other {
-  padding: 25px 20px 0;
+  padding: 26px 20px 0;
 }
 
 .page-main__subscription {
@@ -37,11 +37,31 @@
 .page-main__description {
   @include font-family($font-family-primary, 400, 14px, 129%);
   margin: 0;
-  padding: 0 72px 19px 20px;
+  padding: 0 72px 17px 20px;
   text-transform: uppercase;
   color: $text-color-main;
 }
 
 .page-main__form {
-  padding: 20px;
+  padding: 0;
+}
+
+.page-main__form-button {
+  margin: 0 20px;
+}
+
+// tablet
+
+@media (min-width: $tablet-width) {
+  .page-main__programs {
+    padding: 0 30px;
+  }
+
+  .page-main__functional {
+    padding: 45px 30px 43px;
+  }
+
+  .page-main__example {
+    padding: 45px 30px 0;
+  }
 }
