--- a/source/styles/blocks/subscription.scss
+++ b/source/styles/blocks/subscription.scss
@@ -6,22 +6,17 @@
 }
 
 .subscription__heading {
+  @include font-family($font-family-primary, 400, 24px, 100%);
+  display: flex;
   margin: 0;
   padding: 0 0 32px;
-  font-family: $font-family-primary;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 100%;
   color: $text-color-main;
 }
 
 .subscription__text {
+  @include font-family($font-family-primary, 400, 16px, 150%);
   margin: 0;
   padding: 0 0 24px;
-  font-family: $font-family-primary;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
   text-align: center;
   color: $text-color-main;
 }
